# templates

./: .gitignore  DISCLAIMER.md  INTEGRATIONS.md  INTEROP.md  README.md  conftest.py  install.sh  layman.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: docker-compose.yml  k8s.yaml
deploy-templates/: README.md
deploy-templates/ansible/: playbook.yml
deploy-templates/aws-sam/: template.yaml
deploy-templates/cookiecutter/: cookiecutter.json
deploy-templates/devcontainer/: devcontainer.json
deploy-templates/docker/: Dockerfile  docker-compose.yml
deploy-templates/github-actions/: ci.yml  docker-publish.yml
deploy-templates/gitlab-ci/: .gitlab-ci.yml
deploy-templates/helm/: Chart.yaml  values.yaml
deploy-templates/helm/templates/: deployment.yaml
deploy-templates/kubernetes/: deployment.yaml
deploy-templates/nginx/: nginx.conf
deploy-templates/pulumi/: index.ts
deploy-templates/serverless/: serverless.yml
deploy-templates/setup/: Makefile  justfile
deploy-templates/systemd/: cognis-app.service
deploy-templates/terraform/: main.tf
deploy-templates/vagrant/: Vagrantfile
deploy/terraform/: main.tf
docker/: .dockerignore  Dockerfile
docs/: DEPLOY.md  INSTALL.md
integrations/: test_webhook.py  webhook.py
mcp-server-python/: README.md  pyproject.toml
mcp-server-python/src/cognis_mcp/: __init__.py  __main__.py  server.py
mcp-server-python/tests/: test_server.py
python-cli/: README.md  pyproject.toml
python-cli/src/cognis_tool/: __init__.py  __main__.py  cli.py  commands.py
python-cli/tests/: test_cli.py
templates/: README.template.md
