[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-mcp"
version = "0.1.0"
description = "A Cognis Digital MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cognis Digital", email = "dev@cognis.digital" }]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
cognis-mcp = "cognis_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cognis_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
asyncio_mode = "auto"
