[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-tool"
version = "0.1.0"
description = "A Cognis Digital command-line tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cognis Digital", email = "dev@cognis.digital" }]
keywords = ["cli", "cognis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
cognis-tool = "cognis_tool.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/cognis-tool"
Issues = "https://github.com/cognis-digital/cognis-tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cognis_tool"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
